--- a/gotjokes/package.json
+++ b/gotjokes/package.json
@@ -8,6 +8,7 @@
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.4.2",
+    "react-favicon": "0.0.14",
     "react-scripts": "1.1.5"
   },
   "scripts": {
