--- a/gotjokes/package.json
+++ b/gotjokes/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^3.0.2",
     "axios": "^0.18.0",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.4.2",
     "react-favicon": "0.0.14",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
   "scripts": {
